@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Fri Dec 14 19:51:47 2001 -->
+<!-- Sat Dec 15 14:16:56 2001 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -288,6 +288,7 @@ FEATURE(`local_procmail', `/usr/bin/procmail')
 LOCAL_CONFIG
 HX-Envelope-To: $u 
 HX-Envelope-From: $g 
+
 </blockquote></pre>
 
 Sendmail will now use procmail to delivery local mail, and will
