@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Thu Dec 13 18:38:28 2001 -->
+<!-- Sat Dec 15 14:13:08 2001 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -183,7 +183,7 @@ RPM are available.
 Report your installation (used only to satisfy my curiosity):
 
 <blockquote><pre>
-# ( python -c 'from TMDA.Version import *; print SUMMARY' ) \
+# ( python -c 'from TMDA.Version import *; print ALL' ) \
   | mail jason-tmdausage@mastaler.com
 </blockquote></pre>
 
